recorded with this code for dqn

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,22 +7,18 @@ description = "Code for Edreate's Deep Reinforcement Learning Course: https://ed
 
 readme = "README.md"
 
-requires-python = "==3.13.5"
+requires-python = "==3.13.12"
 
 dependencies = [
+    "gymnasium[box2d]>=1.2.3",
     "jupyter>=1.1.1",
-    "matplotlib>=3.10.6",
-    "numpy>=2.3.3",
-    "pygame>=2.6.1",
-    "ruff>=0.13.0",
-
+    "matplotlib>=3.10.8",
+    "numpy>=2.4.2",
+    "onnx>=1.20.1",
+    "onnxruntime>=1.24.2",
+    "onnxscript>=0.6.2",
+    "ruff>=0.15.2",
+    "swig>=4.4.1",
+    "torch>=2.10.0",
 ]
 
-[dependency-groups]
-deep-learning = [
-    "gymnasium[box2d]>=1.2.0",
-    "onnx>=1.19.0",
-    "onnxruntime>=1.22.1",
-    "swig>=4.3.1.post0",
-    "torch>=2.8.0",
-]
